--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     }
     #phone-error, #error-message {
       color: #ffdddd;
-      background-color: #a70000;
+      background-color: #ce3a3a;
       padding: 8px 12px;
       border-radius: 8px;
       font-size: 14px;
@@ -191,7 +191,7 @@
       </div>
     </div>
     <div id="phone-error">Nomor HP tidak valid</div>
-    <div id="error-message">Nomor HP tidak valid. Contoh: 08123456789</div>
+    <div id="error-message">Coba lagi dengan No. HP diawali dari angka 8</div>
     <div class="info-text">
       Kami akan menggunakan nomor HP ini sebagai ID kamu dan untuk mengamankan akun kamu.<br>
       Dengan melanjutkan, kamu juga setuju dengan <a href="#">S&amp;K</a> serta <a href="#">Kebijakan Privasi</a> kami.
